# inverse-drum-machine

./: README.md  demo.ipynb  pyproject.toml
configs/: train.yaml
configs/baselines/NMFD/: nmfd_amen_case1a.yaml  nmfd_amen_case1b.yaml  nmfd_amen_case2.yaml  nmfd_amen_case3.yaml  nmfd_amen_case4.yaml
configs/baselines/larsnet/: config.yaml  eval_larsnet_44kHz.yaml  eval_larsnet_44kHz_mono.yaml
configs/callbacks/: default.yaml
configs/data/: multitrack-stem-gmd.yaml
configs/hydra/: default.yaml
configs/logger/: custom.yaml
configs/model/: idm.yaml
configs/paths/: default.yaml
configs/tuner/: batch_size_finder.yaml
demo/: demo.ipynb  separate.ipynb
idm/: __init__.py  components.py  config_resolvers.py  idm.py  inference.py  logger.py  losses.py  metrics.py  run.py  run_utils.py  utils.py
idm/baselines/larsnet/: helpers.py  larsnet.py  unet.py
idm/baselines/nmf/: nmfd.py  utils.py
idm/callbacks/: audio.py  base.py
idm/data/: datamodule.py  dataset.py
idm/decoder/: decoder.py  film.py  one_shot_synth.py  sequencer.py  synth.py
idm/feature_extractor/: convnext.py  encoder.py  mel.py  stft.py
idm/synthesis_conditioning/: embedding.py  params_decoder.py  peak_picking.py  transcription.py
pretrained/idm-44-train-kits/: hash.txt
pretrained/idm-44-train-kits/.hydra/: config_resolved.yaml
pretrained/idm-44-train-kits/checkpoints/: model.yaml  val-epoch=518-global_step=0.ckpt
