[tool.poetry]
name = "inverse-drum-machine"
version = "0.1.0"
description = "Drum Source Separation Through Joint Transcription and Analysis-by-Synthesis"
authors = ["Bernardo Torres"]
packages = [{include = "idm"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
einops = "^0.7.0"
matplotlib = "3.8.2"
lightning = "^2.1.2"
auraloss = "^0.4.0"
librosa = "^0.9.1"
numpy = "^1.23.4"
soundfile = "^0.12.1"
torchaudio = "^2.1.1"
scipy = "^1.10.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
tqdm = "^4.66.1"
omegaconf = "^2.3.0"
mir_eval = "^0.7"
pyyaml = "^6.0.1"
hydra-core = "^1.3.2"
rootutils = "^1.0.7"
rich = "^13.7.0"
lightning-utilities = "^0.10.0"
soxr = "^0.3.7"
beautifulsoup4 = "^4.12.2"
hydra-colorlog = "^1.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.full]
optional = true

[tool.poetry.group.dev.dependencies]
wandb = "^0.15.12"
ipython = "^8.18.1"
ruff = "^0.14.0"
black = "^25.9.0"

[tool.poetry.group.nmf.dependencies]
torchnmf = "^0.3.5"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"] # Ignore line too long, handled by black

[tool.ruff.isort]
known-first-party = ["my_project_name"]